Fix the slight scrollbar issue with Table (#2868)

--- a/xmlui/src/components/Table/Table.module.scss
+++ b/xmlui/src/components/Table/Table.module.scss
@@ -153,9 +153,10 @@ $borderColor-cell-Table: createThemeVar("borderColor-cell-Table");
     color: $textColor-Table;
 
     tbody {
-      display: inline-block;
+      display: block;
       min-width: 100%;
       background-color: $backgroundColor-Table;
+      margin-bottom: 1px;
     }
 
     .row,
